--- a/myfirst.html
+++ b/myfirst.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html>
+<body bgcolor="#FFFF99">
 <h1>My First Heading for BT2201</h1>
 <body>
 <P>My first paragraph for BT2201</p>
