--- a/myfirst.html
+++ b/myfirst.html
@@ -3,6 +3,6 @@
 <body bgcolor="#FFFF99">
 <h1>My First Heading for BT2201</h1>
 <body>
-<P>My first paragraph for BT2201</p>
+<h2>My first paragraph for BT2201</p>
 </body>
 </html>
