--- a/myfirst.html
+++ b/myfirst.html
@@ -2,7 +2,6 @@
 <html>
 <body bgcolor="#FFFF99">
 <h1>My First Heading for BT2201</h1>
-<body>
-<h2>My first paragraph for BT2201</h2>
+<p1>My first paragraph for BT2201</p2>
 </body>
 </html>
