--- a/myfirst.html
+++ b/myfirst.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body bgcolor="#FFFF99">
-<h1>My First Heading for BT2201</h1>
-<p>My first paragraph for BT2201</p>
+<front color="#9999CC>My First Heading for BT2201</front>
+<front color="#D9B300>My first paragraph for BT2201</front>
 </body>
 </html>
