--- a/myfirst.html
+++ b/myfirst.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body bgcolor="#FFFF99">
-<front color="#9999CC>My First Heading for BT2201</front>
-<front color="#D9B300>My first paragraph for BT2201</front>
+<h1><font color="#9999CC>My First Heading for BT2201</font></h1>
+<p><front color="#D9B300>My first paragraph for BT2201</front></p>
 </body>
 </html>
