--- a/myfirst.html
+++ b/myfirst.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body bgcolor="#FFFF99">
-<h1><font color="#9999CC>My First Heading for BT2201</font></h1>
+<h1>My First Heading for BT2201</h1>
 <p><front color="#D9B300>My first paragraph for BT2201</front></p>
+<p><font color="#9999CC>My second paragraph for BT2201</font></p>
 </body>
 </html>
