--- a/myfirst.html
+++ b/myfirst.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style type="text/css">
+h1 {font‐size: 30px; color: red;}
+</style>
+</head>
 <body bgcolor="#FFFF99">
 <h1>My First Heading for BT2201</h1>
 <p><font color="#D9B300">My first paragraph for BT2201</font></p>
