--- a/myfirst.html
+++ b/myfirst.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style type="text/css">
-h1 {font-size: 100px; color: #FF0000;}
+h1 {font-size: 100px; color: red;}
 </style>
 </head>
 <body bgcolor="#FFFF99">
